--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
+    <div class="usernumber">Il tuo numero è:</div>
+    <div class="pcnumber">Il numero del pc è: </div>
+    <div class="finalscore">La somma è: </div>
     
 </body>
 </html>
